# sanmou-yanwu

./: .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  DUPLICATE_REMOVER_GUIDE.md  FUTURE_MODEL_LOGGING.md  GAME.md  GAME_RULE.md  Makefile  OPTIMIZE_TEAMS_IMPROVEMENT_PLAN.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  TELEMETRY_IMPLEMENTATION_PLAN.md  WEB_INTERFACE_GUIDE.md  ai_recommendation_system.py  batch_extract_battles.py  database.json  extraction_config.json  nixpacks.toml  pyproject.toml  railway.toml  remove_duplicates.py  render.yaml  requirements.txt  skill_extraction_system.py  start.sh  start_web_advisor.py  uv.toml  vercel.json  web_advisor.py
.github/workflows/: update-telemetry-data.yml
.rovodev/: improve-tips.md  learn-from-video.md  prompts.yml
api/: .agent.md  ai_recommendation_system.py  export_battle_stats.py  requirements.txt  start_web_advisor.py  web_advisor.py
autojs/: battle-detail.js  index.js
battle_details_extraction/: .gitignore  README.md  validate_ocr.py
battles/: 2025-08-31-160424.json  2025-08-31-160519.json  2025-09-04-174619.json  2025-09-04-174659.json  2025-09-04-174740.json  2025-09-04-174759.json  2025-09-04-174811.json  2025-09-04-174858.json  2025-09-05-084231.json  2025-09-05-084317.json  2025-09-05-084326.json  2025-09-05-084400.json  2025-09-05-084412.json  2025-09-05-084512.json  2025-09-05-084525.json  IMG_7827.json
data/: build_recommendation_data.py  build_telemetry_data.py  check_duplicates.py  database.json  export_battle_stats.py  remove_duplicate_battles.py  telemetry_incremental_state.py  telemetry_observation_report.py  telemetry_retention.py  telemetry_state.json  test_build_recommendation_data.py  test_build_telemetry_data.py  test_telemetry_incremental_state.py  test_telemetry_observation_report.py  test_telemetry_retention.py
data/battles/: 2025-08-31-160345.json  2025-08-31-160424.json  2025-08-31-160455.json  2025-08-31-160519.json  2025-08-31-160605.json  2025-09-04-174619.json  2025-09-04-174632.json  2025-09-04-174659.json  2025-09-04-174714.json  2025-09-04-174740.json  2025-09-04-174759.json  2025-09-04-174811.json  (+2876 more)
image_extraction/: .agent.md  batch_extract_battles.py  extraction_config.json  pyproject.toml  requirements.txt  season.py  skill_extraction_system.py  test_image_extraction.py  test_latest_season.py
learn/: .gitignore  README.md  pyproject.toml  run_ocr.py  strip_m4s.py
learn/learn/: __init__.py  __main__.py  cli.py  download.py  transcribe.py
learn/learn/cookies/: __init__.py  jar.py  playwright_jar.py
learn/learn/providers/: __init__.py  base.py  bilibili.py  douyin.py  generic.py
miniprogram-vue/: .agent.md  .env.example  .gitignore  .skill.md  SKILL.md  package-lock.json  package.json  playwright.config.js  vite.config.js
ocr_corrections/: 20251213-143904-505789_8a74efc5_t1_h2_s1.json  20251213-144217-248099_d89c2606_t1_h3_s2.json  20251213-144310-780766_8450a895_t1_h3_s1.json  20251213-145449-309804_123ec40c_t1_h3_s1.json  20251220-093331-408716_0ceb0e3e_t2_h2_s2.json  20251220-095355-905274_1889d803_t1_h2_s3.json  20251220-095507-545183_4d4615c6_t2_h3_s3.json
research/: 公式.md
study-battle-report/: ocr_battle_log.py
templates/: analytics.html  index.html
train/: 1.json  3.json
video/: .gitignore  AGENTS.md  README.md  SCRIPT.md  package-lock.json  package.json  remotion.config.ts  requirements-tts.txt  tsconfig.json
web/: .env  .env.example  .env.production  .gitignore  .npmrc  .tool-versions  .vercelignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vite.config.js
web_service/: .agent.md  ai_recommendation_system.py  eval_synergy.py  start_web_advisor.py  web_advisor.py
web_service_2/: README.md  package.json
(+302 files in other folders)
