[project]
name = "sanmou"
version = "0.1.0"
description = "Sanmou monorepo: image extraction (OCR) + battle data analytics"
requires-python = ">=3.12,<3.13"
# Root-package dependencies for the offline recommendation-data builder
# (data/build_recommendation_data.py). numpy + scikit-learn give us a
# deterministic, regularized logistic-regression fit for the paired
# opponent-aware model; they are only needed to *build*
# web/src/recommendation_data.json, never at web runtime (the app ships the
# generated artifact).
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[tool.uv.workspace]
members = ["image_extraction"]
# Future members (when created):
#   - "api"  (Python web service)

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
]

[tool.uv]
package = false

# Pin the package index to public PyPI for this open-source repo.
# Mirrors the workspace `uv.toml` — see that file's header for full rationale.
# Without this override, a developer whose `~/.config/uv/uv.toml` points to
# a private artifactory mirror would leak that internal URL (and possibly
# embedded credentials) into `uv.lock`.
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
# Add the workspace root to sys.path so tests can do
#   `from image_extraction.skill_extraction_system import ...`
# (image_extraction/ is a PEP 420 namespace package — no __init__.py needed)
pythonpath = ["."]
testpaths = ["image_extraction"]
