[project]
name = "learn"
version = "0.2.0"
description = "Provider-agnostic video → audio → transcript pipeline (Bilibili, Douyin, YouTube, ...)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "playwright>=1.59.0",
    "requests>=2.33.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
learn = "learn.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["learn"]
